--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 PORT=5000
 # MONGO_URI=mongodb://localhost:27017/chatapp
-MONGO_URImongodb=+srv://denish:Pgj1DMJPbp7AHlqV@cluster0.j9flxr0.mongodb.net/chatapp
+MONGO_URI=mongodb+srv://denish:Pgj1DMJPbp7AHlqV@cluster0.j9flxr0.mongodb.net/chatapp
 JWT_SECRET=your_jwt_secret_key
 JWT_REFRESH_SECRET=your_refresh_secret_key
 ACCESS_TOKEN_EXPIRY=15m
