--- a/client/.env.development
+++ b/client/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://chat-x-production.up.railway.app/api
+NEXT_PUBLIC_API_URL=https://chat-x-Dproduction.up.railway.app/api
 NEXT_PUBLIC_WEBSOCKET_URL=https://chat-x-production.up.railway.app
