--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
+NODE_ENV=production
 PORT=5000
 # MONGO_URI=mongodb://localhost:27017/chatapp
 MONGO_URI=mongodb+srv://denish:Pgj1DMJPbp7AHlqV@cluster0.j9flxr0.mongodb.net/chatapp
