--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/uuid": "^10.0.0",
     "formik": "^2.4.6",
     "framer-motion": "^12.18.1",
     "next": "16.1.6",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.71.1",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1",
+    "uuid": "^13.0.0",
     "yup": "^1.6.1",
     "zod": "^4.3.6"
   },
