--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
-
-
 {
   "name": "chatapp-root",
   "version": "1.0.0",
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\"",
+    "start": "npm start --prefix server",
     "install:all": "npm install --prefix server && npm install --prefix client"
   },
   "devDependencies": {
