--- a/server/.env.production
+++ b/server/.env.production
@@ -6,3 +6,5 @@ JWT_SECRET=your_jwt_secret_key
 JWT_REFRESH_SECRET=your_refresh_secret_key
 ACCESS_TOKEN_EXPIRY=15m
 REFRESH_TOKEN_EXPIRY=7d
+
+REDIS_URL=redis://default:JFTvGoBEVnTTmZuskGFwEqUYNtumxYrQ@redis.railway.internal:6379
