Enhance CORS, geolocation, RTK transforms, env
Multiple client and server updates:
- Client: added null-safety in ChatRequests, pre-request geolocation in login, HTTPS checks for location prompts in explore and register, and normalized API responses by adding transformResponse to RTK query endpoints (nearby users, chat requests, blocks).
- Server: tightened and normalized CORS handling (whitelist, local dev allowances, better logging) and mirrored logic for socket CORS; added no-cache response headers middleware.
- Env: updated REDIS_URL values in production and development env files.
These changes improve cross-origin robustness in development, streamline frontend handling of API payloads, and provide clearer UX/error messaging for location access.

--- a/server/.env
+++ b/server/.env
@@ -9,4 +9,4 @@ ACCESS_TOKEN_EXPIRY=15m
 REFRESH_TOKEN_EXPIRY=7d
 
 
-REDIS_URL=redis://default:JgjBrzqWcrgOcPDUWzjxjUjHqPlCbGJW@redis.railway.internal:6379
+REDIS_URL=redis://default:JgjBrzqWcrgOcPDUWzjxjUjHqPlCbGJW@shinkansen.proxy.rlwy.net:11884
