--- a/server/.env.production
+++ b/server/.env.production
@@ -1,5 +1,5 @@
 NODE_ENV=production
-PORT=5000
+# PORT=5000
 MONGO_URI=mongodb+srv://denish:Pgj1DMJPbp7AHlqV@cluster0.j9flxr0.mongodb.net/chatapp
 FRONTEND_URL=https://chat-x-nu.vercel.app
 JWT_SECRET=your_jwt_secret_key
